@startuml
interface ILabOrderInterface {
    OrderNumber : string <<get>>
    Department : string <<get>>
    Priority : string <<get>>
    ReceivedDate : DateTime <<get>>
    Tests : IReadOnlyList<ITestInfo> <<get>>
    HasTest(testCode:string) : bool
    GetCustomField(name:string) : object?
}
interface ILabOrderRWInterface {
    SetCustomField(name:string, value:object) : void
    AddTest(testCode:string) : bool
    SetPriority(priority:string) : void
    RemoveTest(testCode:string) : void
}
interface ILabOrderInterfaceV2 {
    RandomNewDouble : double <<get>> <<set>>
}
interface ILabOrderInterfaceV3 {
    randomNewFunctionInV3(funcName:string) : string
}
interface ILabOrderInterfaceV4NoInheritence {
    OrderNumber : string <<get>>
    Department : string <<get>>
    AddTest(testCode:string) : bool
    randomNewFunctionInV3(funcName:string) : string
}
class LabOrder {
    + OrderNumber : string <<get>>
    + Department : string <<get>>
    + Priority : string <<get>>
    + ReceivedDate : DateTime <<get>>
    + RandomNewDouble : double <<get>> <<set>>
    - _tests : List<Test>
    - _customFields : Dictionary<string, object>
    + Tests : IReadOnlyList<ITestInfo> <<get>>
    + LabOrder(orderNumber:string, department:string)
    + HasTest(testCode:string) : bool
    + AddTest(testCode:string) : bool
    + RemoveTest(testCode:string) : void
    + SetPriority(priority:string) : void
    + SetCustomField(name:string, value:object) : void
    + GetCustomField(name:string) : object?
    + randomNewFunctionInV3(funcName:string) : string
}
ILabOrderInterface <|-- ILabOrderRWInterface
ILabOrderRWInterface <|-- ILabOrderInterfaceV2
ILabOrderInterfaceV2 <|-- ILabOrderInterfaceV3
ILabOrderRWInterface <|-- LabOrder
ILabOrderInterface <|-- LabOrder
ILabOrderInterfaceV2 <|-- LabOrder
ILabOrderInterfaceV3 <|-- LabOrder
ILabOrderInterfaceV4NoInheritence <|-- LabOrder
@enduml
